<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherLogin">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="36dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="99dp"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="161dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="225dp"
            android:text="@string/TeacherId" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="173dp"
            android:layout_marginTop="163dp"
            android:ems="10"
            android:hint="Enter full name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/teacherId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="173dp"
            android:layout_marginTop="231dp"
            android:ems="10"
            android:hint="Enter teacher id"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="159dp"
            android:layout_marginTop="38dp"
            android:ems="10"
            android:hint="Enter valid email id"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="163dp"
            android:layout_marginTop="106dp"
            android:ems="10"
            android:hint="Enter phone number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="173dp"
            android:layout_marginTop="309dp"
            android:ems="10"
            android:hint="Enter password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="303dp"
            android:text="@string/password" />

        <Button
            android:id="@+id/TecherLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="149dp"
            android:layout_marginTop="404dp"
            android:layout_marginEnd="157dp"
            android:onClick="register_teacher"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="489dp"
            android:onClick="Login"
            android:text="@string/registered" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>